# Lab_2_2026

./: .gitmodules  CmakeLists.txt
include/: DynamicArray.hpp  LinkedList.hpp
src/: LinkedList.tpp  main.cpp
src/core/: ArrayIterator.hpp  CMakeLists.txt  DynamicArray.hpp  DynamicArray.tpp  LinkedList.hpp  LinkedList.tpp
src/sequences/: CMakeLists.txt  EnumeratorSequence.hpp  EnumeratorSequence.tpp  ImutableSequenceArray.hpp  Sequence.hpp  SequenceArray.hpp  SequenceArray.tpp  SequenceList.hpp  SequenceList.tpp
src/sequences/SequenceArray/: CMakeLists.txt  MutableSequenceArray.hpp  SequenceArray.hpp  SequenceArray.tpp
src/sequences/SequenceList/: CMakeLists.txt  SequenceList.hpp  SequenceList.tpp
src/utils/: Exceptions.hpp  IEnumerator.hpp
tests/: CMakeLists.txt  tests_SequenceArray.cpp
